deploy/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fusion-app-backend
  namespace: fusion-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: fusion-app-backend
  template:
    metadata:
      labels:
        name: fusion-app-backend
    spec:
      serviceAccountName: fusion-app
      containers:
        - name: fusion-app
          # Replace this with the built image name
          image: registry.njuics.cn/fusion-app/fusion-app:201911131707
          command:
            - /usr/local/bin/fusionapp-dashboard
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
