deploy/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fusion-app-consumer
  namespace: fusion-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: fusion-app-consumer
  template:
    metadata:
      labels:
        name: fusion-app-consumer
    spec:
      serviceAccountName: fusion-app
      containers:
        - name: fusion-app-consumer
          # Replace this with the built image name
          image: registry.cn-hangzhou.aliyuncs.com/njuicscn/consumer:201911191050
          command:
            - /usr/local/bin/fusionapp-consumer
            - subscribe
            - --topic
            - resource-event-source
            - --broker
            - 221.228.66.83:30590
            - --group
            - event-source-group
          imagePullPolicy: Always
