deploy/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fusion-app-operator
  namespace: fusion-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: fusion-app
  template:
    metadata:
      labels:
        name: fusion-app
    spec:
      serviceAccountName: fusion-app
      containers:
        - name: fusion-app
          # Replace this with the built image name
          image: registry.cn-hangzhou.aliyuncs.com/njuicscn/fusion-app:latest
          command:
          - /usr/local/bin/fusionapp-operator
          imagePullPolicy: Always
