deploy/watcher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fusion-app-watcher
  namespace: fusion-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: fusion-app-watcher
  template:
    metadata:
      labels:
        name: fusion-app-watcher
    spec:
      serviceAccountName: fusion-app
      containers:
        - name: fusion-app
          # Replace this with the built image name
          image: registry.cn-hangzhou.aliyuncs.com/njuicscn/fusion-app-watcher:201911191050
          command:
            - /usr/local/bin/fusionapp-watcher
            - --namespace
            - fusion-app-resources
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: socket
              protocol: TCP
